# CoWorker

./: .env.example  .gitattributes  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  Dockerfile  README.en.md  README.md  SECURITY.md  SECURITY.zh-CN.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  coworker-desktop-release.yml  prepare-release.yml
apps/explore-lab/backend/: pyproject.toml
apps/explore-lab/backend/explore_lab/: assembly.py  lab_communicate.py
apps/explore-lab/backend/tests/: test_branch_runner.py
docs/: README.en.md  README.md  api-and-channels.en.md  api-and-channels.md  concepts.en.md  concepts.md  configuration.en.md  configuration.md
docs/architecture/: README.en.md  README.md  concepts.en.md  concepts.md  data-boundaries.en.md  data-boundaries.md
docs/channels/: README.en.md  README.md  api-and-channels.en.md  api-and-channels.md  desktop.en.md  desktop.md  wecom-message-ordering-and-concurrency.en.md  wecom-message-ordering-and-concurrency.md
docs/development/: README.en.md  README.md  development.en.md  development.md
docs/operations/: README.en.md  README.md  configuration.en.md  configuration.md
examples/: api_test.html
scripts/: bump_version.py
src/coworker/: __main__.py
tests/unit/: test_admin_api.py  test_api.py  test_attachments.py  test_brain.py  test_bubble.py  test_bump_version.py  test_channel_host.py  test_channel_registry.py  test_communication_listing.py  test_config_export.py  test_desktop_registry.py  (+17 more)
web/: package-lock.json  package.json  vite.config.ts
(+132 files in other folders)
