[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coworker-explore-lab"
version = "0.1.0"
description = "独立的搭档效果探索平台：导入生产配置快照，fork/step/并行调试 prompt 与配置改动"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "coworker",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psutil>=6.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[tool.uv.sources]
coworker = { workspace = true }

[project.scripts]
explore-lab = "explore_lab.orchestrator:main"

[tool.hatch.build.targets.wheel]
packages = ["explore_lab"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
